[#218] Prevent browse pagination to become two lines on mobile

--- a/frontend/src/modules/browse/styles.scss
+++ b/frontend/src/modules/browse/styles.scss
@@ -2,9 +2,30 @@
 
 @media (max-width: 640px) {
   #browse {
+    .ui.container {
+      margin-left: 0px !important;
+      margin-right: 0px !important;
+    }
+
     .scroll-content {
       .ant-card {
         margin: 0px !important;
+
+        h4 {
+          width: calc(100% - 100px) !important;
+        }
+
+        .type {
+          font-size: 12px !important;
+          max-width: 100px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+        }
+
+        .ant-card-body {
+          padding: 10px 20px;
+        }
       }
     }
 
